--- a/ProyectoBasico/Projects/RenderTest/RenderTest.vcxproj.filters
+++ b/ProyectoBasico/Projects/RenderTest/RenderTest.vcxproj.filters
@@ -15,16 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\src\RenderTest\Source Files\main.cpp">
-      <Filter>Archivos de origen</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\RenderTest\Source Files\WindowRenderer.cpp">
-      <Filter>Archivos de origen</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\src\RenderTest\Header Files\WindowRenderer.h">
+    <ClInclude Include="..\..\src\RenderApp\Header Files\RenderSystem.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\RenderApp\Header Files\WindowRenderer.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\src\RenderApp\Source Files\RenderSystem.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\RenderApp\Source Files\WindowRenderer.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
