--- a/ProyectoBasico/Projects/Application/Application.vcxproj.filters
+++ b/ProyectoBasico/Projects/Application/Application.vcxproj.filters
@@ -111,6 +111,12 @@
     <ClInclude Include="..\..\src\Application\Header Files\TransformComponent.h">
       <Filter>Header Files\Entities\Components\Update</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\Application\Header Files\Input_OIS_Listener.h">
+      <Filter>Header Files\Entities\Components\Input</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\Application\Header Files\GmInputListener.h">
+      <Filter>Header Files\Entities\Components\Input</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Application\Source Files\EasyDefines.cpp">
@@ -157,6 +163,9 @@
     </ClCompile>
     <ClCompile Include="..\..\src\Application\Source Files\TransformComponent.cpp">
       <Filter>Source Files\Entities\Components\Update</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Application\Source Files\GmInputListener.cpp">
+      <Filter>Source Files\Entities\Components\Input</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
