--- a/ProyectoBasico/Projects/Application/Application.vcxproj.filters
+++ b/ProyectoBasico/Projects/Application/Application.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClInclude Include="..\..\src\Application\Header Files\GmInputListener.h">
       <Filter>Header Files\Entities\Components\Input</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\Application\Header Files\PlayerInputListener.h">
+      <Filter>Header Files\Entities\Components\Input</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Application\Source Files\EasyDefines.cpp">
@@ -165,6 +168,9 @@
       <Filter>Source Files\Entities\Components\Update</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\Application\Source Files\GmInputListener.cpp">
+      <Filter>Source Files\Entities\Components\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Application\Source Files\PlayerInputListener.cpp">
       <Filter>Source Files\Entities\Components\Input</Filter>
     </ClCompile>
   </ItemGroup>
