--- a/ProyectoBasico/Projects/Application/Application.vcxproj
+++ b/ProyectoBasico/Projects/Application/Application.vcxproj
@@ -19,10 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\Application\Header Files\Component.h" />
-    <ClInclude Include="..\..\src\Application\Header Files\ComponentFactory.h" />
     <ClInclude Include="..\..\src\Application\Header Files\EasyDefines.h" />
-    <ClInclude Include="..\..\src\Application\Header Files\EntityC.h" />
     <ClInclude Include="..\..\src\Application\Header Files\GameManager.h" />
     <ClInclude Include="..\..\src\Application\Header Files\GmInputComponent.h" />
     <ClInclude Include="..\..\src\Application\Header Files\InitOgre.h" />
@@ -32,15 +29,12 @@
     <ClInclude Include="..\..\src\Application\Header Files\RenderUtilities.h" />
     <ClInclude Include="..\..\src\Application\Header Files\Scene.h" />
     <ClInclude Include="..\..\src\Application\Header Files\TimeManager.h" />
-    <ClInclude Include="..\..\src\Application\Header Files\TransformComponent.h" />
     <ClInclude Include="..\..\src\Application\Header Files\weirdTimer.h" />
     <ClInclude Include="Convenio.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Application\Source Files\Application.cpp" />
-    <ClCompile Include="..\..\src\Application\Source Files\Component.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\EasyDefines.cpp" />
-    <ClCompile Include="..\..\src\Application\Source Files\EntityC.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\GameManager.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\GmInputComponent.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\InitOgre.cpp" />
@@ -50,7 +44,6 @@
     <ClCompile Include="..\..\src\Application\Source Files\RenderUtilities.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\Scene.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\TimeManager.cpp" />
-    <ClCompile Include="..\..\src\Application\Source Files\TransformComponent.cpp" />
     <ClCompile Include="..\..\src\Application\Source Files\weirdTimer.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -117,7 +110,7 @@
     <OutDir>$(SolutionDir)exes</OutDir>
     <TargetName>$(ProjectName)_debug</TargetName>
     <IntDir>$(SolutionDir)\inter\$(Platform)\$(Configuration)\$(ProjectName)</IntDir>
-    <IncludePath>$(SolutionDir)Dependencias\OIS\includes;$(SolutionDir)Dependencias\externalLibs;$(SolutionDir)src\RenderTest\Header Files;$(SolutionDir)src\Input\Header Files;$(SolutionDir)src\Application2\Header Files;$(SolutionDir)src\Application\Header Files;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)src\DataManager\Header Files;$(SolutionDir)Dependencias\OIS\includes;$(SolutionDir)Dependencias\externalLibs;$(SolutionDir)src\RenderTest\Header Files;$(SolutionDir)src\Input\Header Files;$(SolutionDir)src\Application2\Header Files;$(SolutionDir)src\Application\Header Files;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)Dependencias\OIS\Build\$(Configuration);$(SolutionDir)Dependencias\ogre-1.12.5\Build\lib\$(Configuration);$(SolutionDir)build\libs\x64\$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -130,7 +123,7 @@
     <LinkIncremental>false</LinkIncremental>
     <OutDir>$(SolutionDir)exes</OutDir>
     <IntDir>$(SolutionDir)\inter\$(Platform)\$(Configuration)\$(ProjectName)</IntDir>
-    <IncludePath>$(SolutionDir)Dependencias\OIS\includes;$(SolutionDir)Dependencias\externalLibs;$(SolutionDir)src\RenderTest\Header Files;$(SolutionDir)src\Input\Header Files;$(SolutionDir)src\Application2\Header Files;$(SolutionDir)src\Application\Header Files;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)src\DataManager\Header Files;$(SolutionDir)Dependencias\OIS\includes;$(SolutionDir)Dependencias\externalLibs;$(SolutionDir)src\RenderTest\Header Files;$(SolutionDir)src\Input\Header Files;$(SolutionDir)src\Application2\Header Files;$(SolutionDir)src\Application\Header Files;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)Dependencias\OIS\Build\$(Configuration);$(SolutionDir)Dependencias\ogre-1.12.5\Build\lib\$(Configuration);$(SolutionDir)build\libs\x64\$(Configuration);$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -161,7 +154,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>OgreMain_d.lib;OIS_d.lib;Input.lib;RenderTest_debug.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>OgreMain_d.lib;DataManager.lib;OIS_d.lib;Input.lib;RenderTest_debug.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -200,7 +193,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>OgreMain.lib;OIS.lib;Input.lib;RenderTest.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>OgreMain.lib;DataManager.lib;OIS.lib;Input.lib;RenderTest.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
