--- a/WeirdEngine/Projects/DataManager/DataManager.vcxproj
+++ b/WeirdEngine/Projects/DataManager/DataManager.vcxproj
@@ -23,13 +23,23 @@
     <ClInclude Include="..\..\src\DataManager\Header Files\ComponentFactory.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\DataManager.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\EntityC.h" />
+    <ClInclude Include="..\..\src\DataManager\Header Files\GmInputComponent.h" />
+    <ClInclude Include="..\..\src\DataManager\Header Files\GmInputListener.h" />
+    <ClInclude Include="..\..\src\DataManager\Header Files\InputComponent.h" />
+    <ClInclude Include="..\..\src\DataManager\Header Files\Input_OIS_Listener.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\json.hpp" />
+    <ClInclude Include="..\..\src\DataManager\Header Files\RenderComponent.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\TransformComponent.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\DataManager\Source Files\Component.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\DataManager.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\EntityC.cpp" />
+    <ClCompile Include="..\..\src\DataManager\Source Files\GmInputComponent.cpp" />
+    <ClCompile Include="..\..\src\DataManager\Source Files\GmInputListener.cpp" />
+    <ClCompile Include="..\..\src\DataManager\Source Files\InputComponent.cpp" />
+    <ClCompile Include="..\..\src\DataManager\Source Files\Input_OIS_Listener.cpp" />
+    <ClCompile Include="..\..\src\DataManager\Source Files\RenderComponent.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\TransformComponent.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -112,7 +122,7 @@
       <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)Dependencias\ogre-1.12.5\OgreMain\include;$(SolutionDir)Dependencias\ogre-1.12.5\Build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Dependencias\ogre-1.12.5\OgreMain\include;$(SolutionDir)Dependencias\ogre-1.12.5\Build\include;$(SolutionDir)Dependencias\OIS\includes;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -162,7 +172,7 @@
       <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <AdditionalIncludeDirectories>$(SolutionDir)Dependencias\ogre-1.12.5\OgreMain\include;$(SolutionDir)Dependencias\ogre-1.12.5\Build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)Dependencias\ogre-1.12.5\OgreMain\include;$(SolutionDir)Dependencias\ogre-1.12.5\Build\include;$(SolutionDir)Dependencias\OIS\includes;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
     </ClCompile>
     <Link>
