--- a/WeirdEngine/Projects/WeirdEngine/WeirdEngine.vcxproj.filters
+++ b/WeirdEngine/Projects/WeirdEngine/WeirdEngine.vcxproj.filters
@@ -7,78 +7,54 @@
     <Filter Include="Source Files">
       <UniqueIdentifier>{48ebf8b3-3a41-473c-8518-fb60a10b74dc}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Time">
+      <UniqueIdentifier>{9bbf1057-edf6-40ff-bb48-98e70df97ebc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Time">
+      <UniqueIdentifier>{772781d3-d09e-43a5-9d06-a7c6bd2fe585}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Varios">
+      <UniqueIdentifier>{63fec7e6-b83f-4eb7-9808-8aee54255d39}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Varios">
+      <UniqueIdentifier>{f8892f94-cac4-4480-bb91-a3fde5d0037e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\WeirdEngine\Header Files\EasyDefines.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\GameManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\WeirdEngine\Header Files\GmInputComponent.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\WeirdEngine\Header Files\GmInputListener.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\WeirdEngine\Header Files\Input_OIS_Listener.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\WeirdEngine\Header Files\PlayerInputComponent.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\WeirdEngine\Header Files\PlayerInputListener.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\src\WeirdEngine\Header Files\RenderComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\Scene.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\src\WeirdEngine\Header Files\TimeManager.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\src\WeirdEngine\Header Files\weirdTimer.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Time</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\TimeManager.h">
+      <Filter>Header Files\Time</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\WeirdEngine\Header Files\InputListener.h">
+      <Filter>Header Files\Varios</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\WeirdEngine\Source Files\EasyDefines.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\GameManager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\WeirdEngine\Source Files\GmInputComponent.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\WeirdEngine\Source Files\GmInputListener.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\WeirdEngine\Source Files\Input_OIS_Listener.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\WeirdEngine\Source Files\PlayerInputComponent.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\WeirdEngine\Source Files\PlayerInputListener.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\src\WeirdEngine\Source Files\RenderComponent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\Scene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\src\WeirdEngine\Source Files\TimeManager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\src\WeirdEngine\Source Files\weirdTimer.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Time</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\TimeManager.cpp">
+      <Filter>Source Files\Time</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\WeirdEngine\Source Files\InputListener.cpp">
+      <Filter>Source Files\Varios</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
