--- a/WeirdEngine/Projects/DataManager/DataManager.vcxproj
+++ b/WeirdEngine/Projects/DataManager/DataManager.vcxproj
@@ -28,6 +28,9 @@
     <ClInclude Include="..\..\src\DataManager\Header Files\InputComponent.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\Input_OIS_Listener.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\json.hpp" />
+    <ClInclude Include="..\..\src\DataManager\Header Files\Messages_decl.h" />
+    <ClInclude Include="..\..\src\DataManager\Header Files\Messages_defs.h" />
+    <ClInclude Include="..\..\src\DataManager\Header Files\Observer.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\RenderComponent.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\TransformComponent.h" />
   </ItemGroup>
@@ -39,6 +42,7 @@
     <ClCompile Include="..\..\src\DataManager\Source Files\GmInputListener.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\InputComponent.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\Input_OIS_Listener.cpp" />
+    <ClCompile Include="..\..\src\DataManager\Source Files\Observer.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\RenderComponent.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\TransformComponent.cpp" />
   </ItemGroup>
