--- a/WeirdEngine/Projects/DataManager/DataManager.vcxproj
+++ b/WeirdEngine/Projects/DataManager/DataManager.vcxproj
@@ -21,8 +21,10 @@
   <ItemGroup>
     <ClInclude Include="..\..\src\DataManager\Header Files\Component.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\ComponentFactory.h" />
+    <ClInclude Include="..\..\src\DataManager\Header Files\C_Factory.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\DataManager.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\EntityC.h" />
+    <ClInclude Include="..\..\src\DataManager\Header Files\FactoryRegister.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\GmInputComponent.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\GmInputListener.h" />
     <ClInclude Include="..\..\src\DataManager\Header Files\InputComponent.h" />
@@ -39,6 +41,7 @@
     <ClCompile Include="..\..\src\DataManager\Source Files\Component.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\DataManager.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\EntityC.cpp" />
+    <ClCompile Include="..\..\src\DataManager\Source Files\FactoryRegister.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\GmInputComponent.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\GmInputListener.cpp" />
     <ClCompile Include="..\..\src\DataManager\Source Files\InputComponent.cpp" />
